# ragthen

./: .gitignore  INSTALL.md  RAG_INICIATIVA.md  README.md  RENATO.MD  ragthen-llamaindex-pipeline.drawio  ragthen-llamaindex-pipeline.mmd  ragthen-pipeline-actual.drawio  ragthen-pipeline.mmd  resumen-ingesta-librerias.md
diagrams/: desarrollo-roadmap.drawio  ragthen-vs-llamaindex-ingestion.drawio
metrics/: metrics_latest.json  ragthen_metrics.xlsx
openspec/: config.yaml
openspec/changes/epub-md-pipeline/: design.md  proposal.md  tasks.md
openspec/changes/epub-md-pipeline/specs/epub-ingestion/: spec.md
openspec/changes/epub-md-pipeline/specs/ragthen-core/: spec.md
openspec/changes/epub-md-pipeline/specs/semantic-chunking/: spec.md
openspec/changes/llamaindex-migration/: design.md  proposal.md  tasks.md
openspec/changes/llamaindex-migration/specs/ragthen-agent/: spec.md
openspec/changes/llamaindex-migration/specs/ragthen-core/: spec.md
openspec/changes/llamaindex-migration/specs/ragthen-server/: spec.md
openspec/specs/ragthen-agent/: spec.md
openspec/specs/ragthen-content/: spec.md
openspec/specs/ragthen-core/: spec.md
ragthen-agent/: DESIGN.md  bootstrap.ps1  pyproject.toml
ragthen-agent/.opencode/agents/: Ragthen.md
ragthen-agent/.opencode/skills/analisis-multifuente/: SKILL.md
ragthen-agent/src/ragthen_agent/: __init__.py  cli.py  vault.py
ragthen-agent/src/ragthen_agent/backends/: __init__.py  interface.py  local.py  remote.py
ragthen-content/: README.md
ragthen-content/scripts/: sync_from_drive.py
ragthen-core/: .gitignore  pyproject.toml  requirements.txt
ragthen-core/src/ragthen_core/: __init__.py  config.py  engine.py  llama_engine.py  rerank.py  storage.py
ragthen-server/: Dockerfile  docker-compose.yml  pyproject.toml
ragthen-server/src/ragthen_server/: __init__.py  api.py
ragthtena-agent/: bootstrap.ps1  pyproject.toml
ragthtena-agent/.opencode/agents/: ragthtena.md
ragthtena-agent/.opencode/skills/analisis-multifuente/: SKILL.md
ragthtena-agent/src/ragthtena_agent/: __init__.py  cli.py  vault.py
ragthtena-agent/src/ragthtena_agent/backends/: interface.py  local.py  remote.py
ragthtena-content/: .gitignore  README.md
ragthtena-content/scripts/: sync_from_drive.py
ragthtena-core/: pyproject.toml
ragthtena-core/src/ragthtena_core/: config.py  engine.py  rerank.py  storage.py
test/: generate_metrics.py  test_chroma_embeddings.py  test_pdf_extractors.py  test_pdfreader_metadata.py
