[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragthen-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ragthen-core",
    "openai>=1.30.0",
]

[project.scripts]
ragthen = "ragthen_agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
