[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragthen-core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
    "python-dotenv>=1.0.0",
    "llama-index-core>=0.14.0",
    "llama-index-vector-stores-chroma>=0.5.0",
    "llama-index-readers-file>=0.6.0",
    "llama-index-llms-openai>=0.7.0",
    "llama-index-embeddings-openai>=0.6.0",
    "llama-index-embeddings-huggingface>=0.7.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
