[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragthen-server"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ragthen-core",
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
