[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragthtena-agent"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "ragthtena-core",
    "openai>=1.30.0",
]

[project.scripts]
ragthtena = "ragthtena_agent.cli:main"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
