[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ragthtena-core"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "chromadb>=0.5.0",
    "pymupdf>=1.24.0",
    "sentence-transformers>=2.7.0",
    "openai>=1.30.0",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
